<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/paramsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/runButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalJobsLimitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_jobs_limit_label"
                android:textStyle="bold" />

            <Button
                android:id="@+id/totalJobsLimitMinusButton"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/minus_button" />

            <EditText
                android:id="@+id/totalJobsLimitEditor"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/total_jobs_limit_default"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/total_jobs_limit_default"
                android:textAlignment="textEnd"
                android:autofillHints="" />

            <Button
                android:id="@+id/totalJobsLimitPlusButton"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/plus_button" />

            <Button
                android:id="@+id/totalJobsLimitSetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onTotalJobsLimitSetClick"
                android:text="@string/change_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/targetJobsLimitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jobs_target_limit_label"
                android:textStyle="bold" />

            <Button
                android:id="@+id/targetJobsLimitMinusButton"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/minus_button" />

            <EditText
                android:id="@+id/targetJobsLimitEditor"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/target_jobs_limit_default"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/target_jobs_limit_default"
                android:textAlignment="textEnd"
                android:autofillHints="" />

            <Button
                android:id="@+id/targetJobsLimitPlusButton"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/plus_button" />

            <Button
                android:id="@+id/targetJobsLimitSetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onTargetJobsLimitSetClick"
                android:text="@string/change_button" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/showTargetLimitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_target_limit_label"
                android:textStyle="bold" />

            <Button
                android:id="@+id/showTargetLimitMinusButton"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/minus_button" />

            <EditText
                android:id="@+id/showTargetLimitEditor"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/show_target_limit_default"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/show_target_limit_default"
                android:textAlignment="textEnd"
                android:autofillHints="" />

            <Button
                android:id="@+id/showTargetLimitPlusButton"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/plus_button" />

            <Button
                android:id="@+id/showTargetLimitSetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onShowTargetLimitSetClick"
                android:text="@string/change_button" />

        </TableRow>

        <!--TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/showTargetLimitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Jobs/target to show:" />

            <EditText
                android:id="@+id/showTargetLimitEditor"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="2"
                android:autofillHints="" />

            <Button
                android:id="@+id/showTargetLimitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="Change" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/reportIntervalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Report interval, sec:" />

            <EditText
                android:id="@+id/reportIntervalEditor"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:text="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/respawnIntervalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Respawn interval, min:" />

            <EditText
                android:id="@+id/respawnIntervalEditor"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:text="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/refreshIntervalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Refresh interval, hour:" />

            <EditText
                android:id="@+id/refreshIntervalEditor"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:text="1" />
        </TableRow-->
    </TableLayout>

    <Button
        android:id="@+id/runButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/run_label"
        app:layout_constraintBottom_toTopOf="@+id/infoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paramsLayout" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/press_run_to_start_info"
        app:layout_constraintBottom_toTopOf="@+id/statisticsScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runButton" />

    <ScrollView
        android:id="@+id/statisticsScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoText">

        <TableLayout
            android:id="@+id/statisticsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:shrinkColumns="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/url_title"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jobs_title"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/success_title"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/failure_title"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fail_rate_title"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_jobs_now_info"
                android:textAlignment="center"
                android:textStyle="italic" />
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>